--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Indie Flower', cursive;
 }
 
 html, body {
